--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leader Board</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/c64673ca66.js" crossorigin="anonymous"></script>
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="styles/style.css" />
@@ -106,11 +108,64 @@
 
       <!-- latest courses -->
 
-      <section class="container">
+      <section class="container courses">
         <div class="latest-courses">
             <div class="course">
-                <img src="" alt="">
-                <span class="course-author"></span>
+                <img class="course-image" src="images/courses/course-1.png" alt="">
+                <h3>React - The Complete <br> Guide 2020 </h3>
+                <h5 class="course-author">Reed Krakoff</h5>
+                <div class="ratings">
+                    <div>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star empty"></i>
+                    </div>
+                    <div>4,5</div>
+                    <div class="duration">
+                        <img class="clock" src="images/icons/clock.png" alt="">
+                        <span class="hour">01:30 hr</span>
+                    </div>
+                </div>
+            </div>
+            <div class="course">
+                <img class="course-image" src="images/courses/course-2.png" alt="">
+                <h3>Powerpoint 2020 <br> Master Powerpoint </h3>
+                <h5 class="course-author">Walter Scoot</h5>
+                <div class="ratings">
+                    <div>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star empty"></i>
+                    </div>
+                    <div>4,3</div>
+                    <div class="duration">
+                        <img class="clock" src="images/icons/clock.png" alt="">
+                        <span class="hour">01:20 hr</span>
+                    </div>
+                </div>
+            </div>
+            <div class="course">
+                <img class="course-image" src="images/courses/course-3.png" alt="">
+                <h3>The Complete Javascript<br> Course 2020 </h3>
+                <h5 class="course-author">Reed Krakoff</h5>
+                <div class="ratings">
+                    <div>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star empty"></i>
+                    </div>
+                    <div>4,5</div>
+                    <div class="duration">
+                        <img class="clock" src="images/icons/clock.png" alt="">
+                        <span class="hour">01:30 hr</span>
+                    </div>
+                </div>
             </div>
         </div>
       </section>
