--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leader Board</title>
+
     <!-- font awesome -->
-    <script src="https://kit.fontawesome.com/c64673ca66.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/c64673ca66.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="styles/style.css" />
@@ -26,8 +30,12 @@
             <li><a href="http://">Works</a></li>
             <li>
               <a href="http://"
-                ><img src="images/icons/profile.png" id="profile" alt=""
-              /></a>
+                ><img
+                  src="images/icons/profile.png"
+                  id="profile"
+                  alt="profile icon"
+                />
+              </a>
             </li>
           </ul>
         </span>
@@ -35,34 +43,40 @@
     </header>
     <!-- header ends -->
 
+    <!--------------------- 
+        main section 
+    ----------------------->
     <main>
+      <!---------------------------
+             Player and Blog section 
+        ----------------------------->
       <section class="container">
         <!-- Top player starts -->
         <div class="top-players">
           <h2 class="section-title">Top Players</h2>
           <div class="players">
             <div class="player">
-              <img src="images/players/player-1.png" alt="" />
+              <img src="images/players/player-1.png" alt="Top player-1" />
               <h3 class="player-name">Top player-1</h3>
             </div>
             <div class="player">
-              <img src="images/players/player-2.png" alt="" />
+              <img src="images/players/player-2.png" alt="Top player-2" />
               <h3 class="player-name">Top player-2</h3>
             </div>
             <div class="player">
-              <img src="images/players/player-3.png" alt="" />
+              <img src="images/players/player-3.png" alt="Top player-3" />
               <h3 class="player-name">Top player-3</h3>
             </div>
             <div class="player">
-              <img src="images/players/player-4.png" alt="" />
+              <img src="images/players/player-4.png" alt="Top player-4" />
               <h3 class="player-name">Top player-4</h3>
             </div>
             <div class="player">
-              <img src="images/players/player-5.png" alt="" />
+              <img src="images/players/player-5.png" alt="Top player-5" />
               <h3 class="player-name">Top player-5</h3>
             </div>
             <div class="player">
-              <img src="images/players/player-6.png" alt="" />
+              <img src="images/players/player-6.png" alt="Top player-6" />
               <h3 class="player-name">Top player-6</h3>
             </div>
           </div>
@@ -73,100 +87,132 @@
         <hr />
 
         <!-- Top Blog starts -->
-        <h2 class="section-title">Top Blog</h2>
+        <h2 class="section-title">Top Blogs</h2>
         <div class="top-blogs">
           <div class="blogs">
-            <img src="images/blogs/blog-1.png" alt="" />
+            <img src="images/blogs/blog-1.png" alt="blog-1" />
             <span>
               <h3>13 of My Favorite UI/UX Goodies</h3>
               <h5>By <span class="author">Danny Sapio</span></h5>
             </span>
           </div>
           <div class="blogs">
-            <img src="images/blogs/blog-2.png" alt="" />
+            <img src="images/blogs/blog-2.png" alt="blog-2" />
             <span>
-              <h3>UI cheat sheet: <br> list vs grids</h3>
+              <h3>
+                UI cheat sheet: <br />
+                list vs grids
+              </h3>
               <h5>By <span class="author">Tess Gadd</span></h5>
             </span>
           </div>
           <div class="blogs">
-            <img src="images/blogs/blog-3.png" alt="" />
+            <img src="images/blogs/blog-3.png" alt="blog-3" />
             <span>
               <h3>7 typography tips for interface design</h3>
               <h5>By <span class="author">Jeremiah Lam</span></h5>
             </span>
           </div>
           <div class="blogs">
-            <img src="images/blogs/blog-4.png" alt="" />
+            <img src="images/blogs/blog-4.png" alt="blog-4" />
             <span>
-              <h3>Your logo is <br> copied</h3>
+              <h3>
+                Your logo is <br />
+                copied
+              </h3>
               <h5>By <span class="author">Ferdinand Vogler</span></h5>
             </span>
           </div>
         </div>
+
+        <!-- Top Blog endss -->
       </section>
 
-      <!-- latest courses -->
+      <!-- ------------------
+        latest courses 
+      ------------------------>
 
       <section class="container courses">
+        <h2 class="course-section-title">Latest Courses</h2>
         <div class="latest-courses">
-            <div class="course">
-                <img class="course-image" src="images/courses/course-1.png" alt="">
-                <h3>React - The Complete <br> Guide 2020 </h3>
-                <h5 class="course-author">Reed Krakoff</h5>
-                <div class="ratings">
-                    <div>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star empty"></i>
-                    </div>
-                    <div>4,5</div>
-                    <div class="duration">
-                        <img class="clock" src="images/icons/clock.png" alt="">
-                        <span class="hour">01:30 hr</span>
-                    </div>
-                </div>
+          <div class="course">
+            <img
+              class="course-image"
+              src="images/courses/course-1.png"
+              alt="course-1"
+            />
+            <h3>
+              React - The Complete <br />
+              Guide 2020
+            </h3>
+            <h5 class="course-author">Reed Krakoff</h5>
+            <div class="ratings">
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star empty"></i>
+              </div>
+              <div>4,5</div>
+              <div class="duration">
+                <img class="clock" src="images/icons/clock.png" alt="clock" />
+                <span class="hour">01:30 hr</span>
+              </div>
             </div>
-            <div class="course">
-                <img class="course-image" src="images/courses/course-2.png" alt="">
-                <h3>Powerpoint 2020 <br> Master Powerpoint </h3>
-                <h5 class="course-author">Walter Scoot</h5>
-                <div class="ratings">
-                    <div>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star empty"></i>
-                    </div>
-                    <div>4,3</div>
-                    <div class="duration">
-                        <img class="clock" src="images/icons/clock.png" alt="">
-                        <span class="hour">01:20 hr</span>
-                    </div>
-                </div>
+          </div>
+          <div class="course">
+            <img
+              class="course-image"
+              src="images/courses/course-2.png"
+              alt="course-2"
+            />
+            <h3>
+              Powerpoint 2020 <br />
+              Master Powerpoint
+            </h3>
+            <h5 class="course-author">Walter Scoot</h5>
+            <div class="ratings">
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star empty"></i>
+              </div>
+              <div>4,3</div>
+              <div class="duration">
+                <img class="clock" src="images/icons/clock.png" alt="clock" />
+                <span class="hour">01:20 hr</span>
+              </div>
             </div>
-            <div class="course">
-                <img class="course-image" src="images/courses/course-3.png" alt="">
-                <h3>The Complete Javascript<br> Course 2020 </h3>
-                <h5 class="course-author">Reed Krakoff</h5>
-                <div class="ratings">
-                    <div>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star empty"></i>
-                    </div>
-                    <div>4,5</div>
-                    <div class="duration">
-                        <img class="clock" src="images/icons/clock.png" alt="">
-                        <span class="hour">01:30 hr</span>
-                    </div>
-                </div>
+          </div>
+          <div class="course">
+            <img
+              class="course-image"
+              src="images/courses/course-3.png"
+              alt="course-3"
+            />
+            <h3>
+              The Complete Javascript<br />
+              Course 2020
+            </h3>
+            <h5 class="course-author">Reed Krakoff</h5>
+            <div class="ratings">
+              <div>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star empty"></i>
+              </div>
+              <div>4,5</div>
+              <div class="duration">
+                <img class="clock" src="images/icons/clock.png" alt="clcok" />
+                <span class="hour">01:30 hr</span>
+              </div>
             </div>
+          </div>
         </div>
       </section>
     </main>
