media query updated

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <hr />
 
         <!-- Top Blog starts -->
-        <h2 class="section-title">Top Blogs</h2>
+        <h2 class="section-title blog-title">Top Blogs</h2>
         <div class="top-blogs">
           <div class="blogs">
             <img src="images/blogs/blog-1.png" alt="blog-1" />
